# p0-zero-shot-fitness

./: .gitignore  CITATION.cff  README.md  pyproject.toml
docs/: DATA.md  anfdc1_external_target_plan.md  code_walkthrough_for_beginners.md  enzyme_panel_plan.md  p0_extensive_project_report.md  p0_final_project_package.md  p0_final_report.md  p0_portfolio_card.md  p0_pre_report_control_upgrade.md  p0_v2_novelty_upgrade.md  portfolio_case_study.md  protein_gym_amie_result.md  protein_gym_beta_glucosidase_result.md  protein_gym_four_enzyme_35m_comparison.md  protein_gym_four_enzyme_8m_comparison.md  protein_gym_tem1_result.md  protein_gym_three_enzyme_comparison.md  protein_gym_vim2_result.md  protein_mpnn_model_family_comparison.md  protein_mpnn_structure_baseline_plan.md  public_writeup.md  social_post.md
examples/: beginner_walkthrough.py
hpc/: README.md  SAVIO.md  SAVIO_PROTEINMPNN.md  esm2_150m.slurm  esm2_35m.slurm  esm2_650m.slurm  savio_esm2_35m.slurm  savio_esm2_35m_amie.slurm  savio_esm2_35m_bgly.slurm  savio_esm2_35m_vim2.slurm  savio_generate_proteinmpnn_profiles.slurm  savio_score_proteinmpnn_profiles.slurm
results/: metrics.json  panel_registry_validation.json  proteingym_bgly_placeholder_vs_esm2_t6_8M.json  proteingym_blat_comparison.json  proteingym_blat_esm2_8m_vs_35m.json  proteingym_four_enzyme_covariate_control_summary.json  proteingym_four_enzyme_esm2_t12_35M_comparison.json  proteingym_four_enzyme_esm2_t12_35M_vs_msa_conservation.json  proteingym_four_enzyme_esm2_t6_8M_comparison.json  proteingym_four_enzyme_msa_conservation_comparison.json  (+8 more)
(+134 files in other folders)
