[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "p0-zero-shot-fitness"
version = "0.1.0"
description = "Fixture-first benchmark for zero-shot protein language model scoring on catalytic versus non-catalytic mutations."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Protein ML Project Lab" }
]
dependencies = []

[project.optional-dependencies]
dev = [
  "numpy>=1.23",
  "pytest>=8.0"
]
esm = [
  "fair-esm>=2.0.0",
  "torch"
]
proteinmpnn = [
  "numpy>=1.23"
]

[project.scripts]
p0-fitness = "p0_zero_shot_fitness.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
p0_zero_shot_fitness = ["fixtures/*.csv", "fixtures/*.fasta", "fixtures/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
